# openai_work

./: pyproject.toml
notebooks/: crawl_website.ipynb  elevenlabs.ipynb  extracted_text.txt  parse_pdf.ipynb  podcast creator.ipynb  processed_text.txt  seminar_creator.ipynb
