[tool.poetry]
name = "openai_work"
version = "0.1.0"
description = ""
authors = ["Jon Eickmeier <me@jeickmeier.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.52.2"
pypdf2 = "^3.0.1"
ipykernel = "^6.29.5"
crawl4ai = "^0.3.72"
sync = "^1.0.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
notebook = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
